# JobSearchAgent

./: .gitignore  pyproject.toml
src/job_search_agent/: config.py  job_search_agent.py  markdown_writer.py  web_search_agent.py
src/job_search_agent/prompts/: prompts.py
src/job_search_agent/services/: agent_interface.py  llm_initializer.py
src/jobsearchagent/: config.py  jobsearchagent.py  webSearchTool.py
src/lang_chain_agent/: config.py
