[project]
name = "jobsearchagent"
version = "0.1.0"
description = ""
authors = [
    {name = "Lukas Hamm",email = "lukas@lukashamm.dev"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "langgraph (>=0.6.2,<0.7.0)",
    "langchain-tavily (>=0.2.11,<0.3.0)",
    "langgraph-checkpoint-sqlite (>=2.0.11,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "langchain[groq] (>=0.3.27,<0.4.0)",
    "tenacity (>=9.1.2,<10.0.0)"
]

[tool.poetry]
packages = [{include = "jobsearchagent", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
